Use Source Sans Pro font

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         {{{NAV_HEADING}}}
         <div id="app"></div>
     </div>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <script type="text/javascript" src="/static/js/settings.js"></script> {{{NAV_FOOTER}}}
 </body>
 
