--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         {{{NAV_HEADING}}}
         <div id="app"></div>
     </div>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i" rel="stylesheet">
     <script type="text/javascript" src="/static/js/settings.js"></script> {{{NAV_FOOTER}}}
 </body>
 
