--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dine personopplysninger - www.nav.no</title>
-</head>
+    <script
+      type="application/javascript"
+      src="/frontendlogger/logger.js"
+    ></script>
+  </head>
 
-<body>
+  <body>
     <div class="pagewrapper">
-        <div id="app"></div>
+      <div id="app"></div>
     </div>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i" rel="stylesheet">
-</body>
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i"
+      rel="stylesheet"
+    />
+  </body>
 </html>
