--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class="pagewrapper">
-      <div id="app"></div>
+      <div id="app" class="app"></div>
     </div>
     <link
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i"
