--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dine personopplysninger - www.nav.no</title>
+    <title>Personopplysninger - www.nav.no</title>
   </head>
 
   <body>
