--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="no">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      http-equiv="Cache-control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta name="theme-color" content="#000000" />
+    {{{NAV_SCRIPTS}}} {{{NAV_STYLES}}} {{{MEGAMENU_RESOURCES}}}
+    <!--
+    manifest.json provides metadata used when your web app is added to the
+    homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+  -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
+
+    <script type="application/javascript">
+      window.frontendlogger = {
+        info: function() {},
+        warn: function() {},
+        error: function() {},
+        event: function() {}
+      };
+      window.frontendlogger.appname = "personopplysninger";
+    </script>
+    <script
+      type="application/javascript"
+      src="/frontendlogger/logger.js"
+    ></script>
+    <!--
+    Notice the use of %PUBLIC_URL% in the tags above.
+    It will be replaced with the URL of the `public` folder during the build.
+    Only files inside the `public` folder can be referenced from the HTML.
+    Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+    work correctly both with client-side routing and a non-root public URL.
+    Learn how to configure a non-root public URL by running `npm run build`.
+  -->
     <title>Personopplysninger - www.nav.no</title>
   </head>
 
   <body>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div class="pagewrapper">
-      <div id="app" class="app"></div>
+      {{{NAV_SKIPLINKS}}} {{{NAV_HEADING}}}
+      <div class="app" id="app"></div>
     </div>
-    <link
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i"
-      rel="stylesheet"
-    />
+    <div class="hodefot-footer">{{{NAV_FOOTER}}}</div>
+    <!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
   </body>
 </html>
