--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta name="theme-color" content="#000000" />
-       <!--{{fragment.styles}}-->
+    {{fragment.styles}}
     <!--style data-merge-styles="true" type="text/css"></style-->
-    <!--{{fragment.scripts}}-->
-    <!--{{fragment.megamenu-resources}}-->
+    {{fragment.scripts}}
+    {{fragment.megamenu-resources}}
     <!--
     manifest.json provides metadata used when your web app is added to the
     homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -51,8 +51,8 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div class="pagewrapper">
-      <!--{{fragment.skiplinks}}-->
-      <!--{{fragment.header-withmenu}}-->
+      {{fragment.skiplinks}}
+      {{fragment.header-withmenu}}
       <div class="app" id="app"></div>
     </div>
     <div class="hodefot-footer"><!--{{fragment.footer-withmenu}}--></div>
