Fjerne html-kommentarer 2

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       {{fragment.header-withmenu}}
       <div class="app" id="app"></div>
     </div>
-    <div class="hodefot-footer"><!--{{fragment.footer-withmenu}}--></div>
+    <div class="hodefot-footer">{{fragment.footer-withmenu}}</div>
     <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
