--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,10 @@
     />
     <meta
       name="description"
-      content="Innsyn i hvilke personopplysninger NAV har lagret om deg. Du kan endre personalia og oppdatere din informasjon via denne siden."
+      content="Se hvilke personopplysninger NAV har lagret om deg. Du kan endre personalia og oppdatere din informasjon via denne siden."
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Se hvilke personopplysninger NAV har lagret om deg. Du kan endre personalia og oppdatere din informasjon via denne siden."/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
