Flytt scripts til header

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
-    {{{NAV_STYLES}}} {{{MEGAMENU_RESOURCES}}}
+    {{{NAV_SCRIPTS}}} {{{NAV_STYLES}}} {{{MEGAMENU_RESOURCES}}}
     <script type="application/javascript">
       window.frontendlogger = {
         info: function() {},
@@ -37,6 +37,6 @@
       {{{NAV_SKIPLINKS}}} {{{NAV_HEADING}}}
       <div class="app" id="app"></div>
     </div>
-    {{{NAV_FOOTER}}} {{{NAV_SCRIPTS}}}
+    {{{NAV_FOOTER}}}
   </body>
 </html>
