--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
-    {{{STYLES}}}
+    {{{styles}}}
     <script type="application/javascript">
       window.frontendlogger = {
         info: function () {},
@@ -34,9 +34,9 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div class="pagewrapper">
-      {{{HEADER}}}
+      {{{header}}}
       <div class="app" id="app"></div>
     </div>
-    {{{FOOTER}}} {{{SCRIPTS}}}
+    {{{footer}}} {{{scripts}}}
   </body>
 </html>
