Setter maincontent på page-template for å sikre fungerende skiplink ved client-side rendring

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta
-      http-equiv="Cache-control"
-      content="no-cache, no-store, must-revalidate"
-    />
-    <meta http-equiv="Pragma" content="no-cache" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
@@ -19,7 +14,7 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div class="pagewrapper">
-      <div class="app" id="app"></div>
+      <main class="app" id="maincontent"></main>
     </div>
   </body>
 </html>
