--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="no">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
-    <title>Personopplysninger - www.nav.no</title>
-  </head>
-  <body>
-    <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div class="pagewrapper">
-      <main class="app" id="maincontent"></main>
-    </div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="theme-color" content="#000000" />
+        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
+        <title>Personopplysninger - www.nav.no</title>
+    </head>
+    <body>
+        <noscript> You need to enable JavaScript to run this app. </noscript>
+        <div class="pagewrapper">
+            <main class="app" id="maincontent"></main>
+        </div>
+    </body>
 </html>
