Basic migration to Vite

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="no">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="theme-color" content="#000000" />
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-        <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
+        <link rel="icon" href="/favicon.ico" />
+        <link rel="stylesheet" href="/index.css" />
         <title>Personopplysninger - www.nav.no</title>
     </head>
     <body>
@@ -13,5 +13,6 @@
         <div class="pagewrapper">
             <main class="app" id="maincontent"></main>
         </div>
+        <script type="module" src="/src/index.tsx"></script>
     </body>
 </html>
